# sbrc24-minicurso-smartnic

./: README.md  bluefield.md
aux/: init_setup.sh
connectx/: README.md  dpdk_vpp_trex-dirty.ipynb  dpdk_vpp_trex.ipynb
connectx/pktgen-dpdk/: Dockerfile  compose.yaml
connectx/vpp/: compose.override.yaml  compose.yaml
flow_hairpin_vnf/: flow_hairpin_vnf_main.c  flow_hairpin_vnf_sample.c  meson.build
netronome/: README.md
